--- a/appsettings.json
+++ b/appsettings.json
@@ -12,7 +12,14 @@
     "Audience": "roadready.com"
   },
   "ConnectionStrings": {
-    "RoadReadyConnectionString": "Server=LAPTOP-PV7LC260;Database=RoadReady;Integrated Security=true;",
-    
+    "RoadReadyConnectionString": "Server=LAPTOP-PV7LC260;Database=RoadReady;Integrated Security=true;"
+
+  },
+  "SmtpSettings": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "Username": "vijayasrichakiri01@gmail.com",
+    "Password": "Vijayasri@06",
+    "EnableSsl": true
   }
 }
