--- a/appsettings.json
+++ b/appsettings.json
@@ -19,7 +19,7 @@
     "Host": "smtp.gmail.com",
     "Port": 587,
     "Username": "vijayasrichakiri01@gmail.com",
-    "Password": "Vijayasri",
+    "Password": "lbwd zoee phlk nbyi",
     "EnableSsl": true
   }
 }
