--- a/appsettings.json
+++ b/appsettings.json
@@ -8,8 +8,8 @@
   "AllowedHosts": "*",
   "Jwt": {
     "Key": "YourSuperSecretKey12345Algorithms",
-    "Issuer": "roadready.com",
-    "Audience": "roadready.com"
+    "Issuer": "https://localhost:7020",
+    "Audience": "https://localhost:7020"
   },
   "ConnectionStrings": {
     "RoadReadyConnectionString": "Server=LAPTOP-PV7LC260;Database=RoadReady;Integrated Security=true;"
