--- a/appsettings.json
+++ b/appsettings.json
@@ -12,14 +12,14 @@
     "Audience": "https://localhost:7020"
   },
   "ConnectionStrings": {
-    "RoadReadyConnectionString": "Server=LAPTOP-PV7LC260;Database=RoadReady;Integrated Security=true;"
+    "RoadReadyConnectionString": "Server=LAPTOP-I82QA3KA;Database=RoadReady;Integrated Security=true;"
 
   },
   "SmtpSettings": {
     "Host": "smtp.gmail.com",
     "Port": 587,
-    "Username": "vijayasrichakiri01@gmail.com",
-    "Password": "lbwd zoee phlk nbyi",
+    "Username": "srinithyanarala02@gmail.com",
+    "Password": "xgxw tyvq estd ckii",
     "EnableSsl": true
   }
 }
